@@ -16,8 +16,17 @@
  */
 package org.microbean.element;
 
+import java.lang.module.ModuleDescriptor;
+
+import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
+import java.util.TreeSet;
+
+import java.util.concurrent.CopyOnWriteArrayList;
+
+import java.util.function.Supplier;
 
 import javax.lang.model.element.AnnotationMirror;
 import javax.lang.model.element.Element;
@@ -36,23 +45,31 @@ public class DefaultModuleElement extends AbstractElement implements ModuleEleme
 
   private final boolean open;
 
-  private final List<? extends Directive> directives;
+  private final List<Directive> directives;
   
-  public DefaultModuleElement(final Name fullyQualifiedName,
-                              final NoType moduleType,
-                              final Set<? extends Modifier> modifiers,
-                              final boolean open,
-                              final List<? extends Directive> directives,
-                              final List<? extends AnnotationMirror> annotationMirrors) {
+  private final List<? extends Directive> readOnlyDirectives;
+
+  public DefaultModuleElement(final Name fullyQualifiedName) {
+    this(fullyQualifiedName, false, null);
+  }
+
+  public DefaultModuleElement(final Name fullyQualifiedName, final boolean open) {
+    this(fullyQualifiedName, open, null);
+  }
+
+  private DefaultModuleElement(final Name fullyQualifiedName,
+                               final boolean open,
+                               final Supplier<List<? extends AnnotationMirror>> annotationMirrorsSupplier) {
     super(fullyQualifiedName,
           ElementKind.MODULE,
-          moduleType == null ? DefaultNoType.MODULE : moduleType,
-          modifiers,
+          DefaultNoType.MODULE,
+          Set.of(),
           null,
-          annotationMirrors);
+          annotationMirrorsSupplier);
     this.simpleName = DefaultName.ofSimple(fullyQualifiedName);
     this.open = open;
-    this.directives = directives == null || directives.isEmpty() ? List.of() : List.copyOf(directives);
+    this.directives = new CopyOnWriteArrayList<>();
+    this.readOnlyDirectives = Collections.unmodifiableList(this.directives);
   }
 
   @Override // AbstractElement
@@ -64,35 +81,67 @@ public class DefaultModuleElement extends AbstractElement implements ModuleEleme
   public final NoType asType() {
     return (NoType)super.asType();
   }
-  
+
   @Override // ModuleElement
   public final boolean isOpen() {
     return this.open;
   }
 
+  final void addDirective(final Directive directive) {
+    this.directives.add(directive);
+  }
+  
   @Override // ModuleElement
   public final List<? extends Directive> getDirectives() {
-    return this.directives;
+    return this.readOnlyDirectives;
   }
                               
   @Override // ModuleElement
-  public final DefaultName getQualifiedName() {
+  public final Name getQualifiedName() {
     return super.getSimpleName();
   }
 
   @Override // ModuleElement
-  public final DefaultName getSimpleName() {
+  public final Name getSimpleName() {
     return this.simpleName;
   }
 
   @Override // ModuleElement
-  public final AbstractElement getEnclosingElement() {
+  public final Element getEnclosingElement() {
     return null;
   }
 
   @Override // ModuleElement
   public final boolean isUnnamed() {
     return this.getSimpleName().length() <= 0;
+  }
+
+  public static final DefaultModuleElement of(final Module m) {
+    final DefaultName name = DefaultName.of(m.getName());
+    final ModuleDescriptor md = m.getDescriptor();
+    final boolean open = md.modifiers().contains(ModuleDescriptor.Modifier.OPEN);
+    DefaultModuleElement returnValue = new DefaultModuleElement(name, open);
+    
+    final Set<ModuleDescriptor.Exports> exports = new TreeSet<>(md.exports());
+    for (final ModuleDescriptor.Exports export : exports) {
+      final DefaultPackageElement packageElement = DefaultPackageElement.of(DefaultName.of(export.source()), returnValue);
+      final List<DefaultModuleElement> targetModuleElements;
+      if (export.isQualified()) {
+        final ModuleLayer layer = m.getLayer();
+        final Set<String> moduleNames = new TreeSet<>(export.targets());
+        targetModuleElements = new ArrayList<>(moduleNames.size());
+        for (final String moduleName : moduleNames) {
+          final Module targetModule = layer.findModule(moduleName).orElse(null);
+          if (targetModule != null) {
+            targetModuleElements.add(of(targetModule));
+          }
+        }
+      } else {
+        targetModuleElements = List.of();
+      }
+      new DefaultExportsDirective(packageElement, targetModuleElements); // side effect: adds itself to returnValue
+    }
+    return returnValue;
   }
   
 }
